--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="table-responsive">
+      <div class="table-responsive mt-5">
         <table class="table table-striped table-hover table-bordered">
           <thead class="table-light">
             <tr>
