--- a/home.html
+++ b/home.html
@@ -10,36 +10,27 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="app">
       <div class="table-responsive mt-5">
         <table class="table table-striped table-hover table-bordered">
           <thead class="table-light">
             <tr>
               <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
+              <th scope="col">Firma Adı</th>
+              <th scope="col">Onay Durumu</th>
+              <th scope="col">Sipariş İzin Başlangıç Saati</th>
+              <th scope="col">Sipariş İzin Bitiş Saati</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <th scope="row">1</th>
+            <tr v-for="(firma, index) in firmalar">
+              <th scope="row">{{index}}</th>
               <td>Mark</td>
               <td>Otto</td>
               <td>@mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td colspan="2">Larry the Bird</td>
-              <td>@twitter</td>
             </tr>
           </tbody>
         </table>
@@ -51,5 +42,49 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script>
+      const { createApp } = Vue;
+      createApp({
+        data() {
+          return {
+            url: "https://localhost:7110/",
+            firmalar: [],
+            firma: {
+              id: "",
+              firmaAdi: "",
+              onayDurumu: false,
+              siparisIzinBasTarihi: null,
+              siparisIzinBitisTarihi: null,
+            },
+          };
+        },
+        methods: {
+          getCompanies() {
+            fetch(this.url)
+              .then((res) => res.json())
+              .then((data) => (this.firmalar = data))
+              .catch((err) => console.log(err.message));
+          },
+          addCompany() {
+            fetch(this.url, {
+              method: "POST",
+              body: JSON.stringify({
+                firmaAdi: this.firma.firmaAdi,
+                OnayDurumu: this.firma.onayDurumu,
+                SiparisIzinBasSaati: this.firma.siparisIzinBasTarihi,
+                SiparisIzinBitisSaati: this.firma.SiparisIzinBitisSaati,
+              }),
+              headers: { "Content-type": "application/json; charset=UTF-8" },
+            })
+              .then((res) => res.json())
+              .then((json) => console.log(json))
+              .catch((err) => console.log(err));
+          },
+        },
+        mounted() {
+          this.getCompanies();
+        },
+      }).mount("#app");
+    </script>
   </body>
 </html>
