--- a/home.html
+++ b/home.html
@@ -1,142 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  </head>
-  <body>
-    <div id="app">
-      <div class="container">
-        <div class="table-responsive mt-5">
-          <table class="table table-striped table-hover table-bordered">
-            <thead class="table-light">
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Firma Adı</th>
-                <th scope="col">Onay Durumu</th>
-                <th scope="col">Sipariş İzin Başlangıç Saati</th>
-                <th scope="col">Sipariş İzin Bitiş Saati</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr v-for="(firma, index) in firmalar">
-                <th scope="row">{{index}}</th>
-                <td>{{firma.FirmaAdi}}</td>
-                <td>{{firma.OnayDurumu}}</td>
-                <td>{{firma.SiparisIzinBasSaati}}</td>
-                <td>{{firma.SiparisIzinBitisSaati}}</td>
-              </tr>
-            </tbody>
-          </table>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+</head>
+
+<body>
+  <div id="app">
+    <div class="container">
+      <div class="table-responsive mt-5">
+        <table class="table table-striped table-hover table-bordered">
+          <thead class="table-light">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Firma Adı</th>
+              <th scope="col">Onay Durumu</th>
+              <th scope="col">Sipariş İzin Başlangıç Saati</th>
+              <th scope="col">Sipariş İzin Bitiş Saati</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr v-for="(firma, index) in firmalar">
+              <th scope="row">{{index}}</th>
+              <td>{{firma.FirmaAdi}}</td>
+              <td>{{firma.OnayDurumu}}</td>
+              <td>{{firma.SiparisIzinBasSaati}}</td>
+              <td>{{firma.SiparisIzinBitisSaati}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Firma Ekle
+      </button>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              Firma Ekle
+            </h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="firmaAdi" class="form-label">Firma Adı</label>
+                <input type="text" class="form-control" id="firmaAdi" v-model="firma.firmaAdi" />
+              </div>
+              <div class="mb-3">
+                <label for="SiparisIzinBasSaati" class="form-label">Sipariş İzin Başlangıç Saati</label>
+                <input type="time" class="form-control" id="SiparisIzinBasSaati" v-model="firma.siparisIzinBasTarihi" />
+              </div>
+              <div class="mb-3">
+                <label for="SiparisIzinBitisTarihi" class="form-label">Sipariş İzin Bitiş Saati</label>
+                <input type="time" class="form-control" id="SiparisIzinBitisTarihi"
+                  v-model="firma.siparisIzinBitisTarihi" />
+              </div>
+              <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="onayDurumu" v-model="firma.onayDurumu" />
+                <label class="form-check-label" for="onayDurumu">Onay Durumu</label>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+              Kapat
+            </button>
+            <button type="button" class="btn btn-primary"  v-on:click="addCompany">Kaydet</button>
+          </div>
         </div>
-          <!-- Button trigger modal -->
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-             Firma Ekle
-        </button>
-      </div>
-
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Firma Ekle</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        
-        <form>
-          <div class="mb-3">
-            <label for="firmaAdi" class="form-label">Firma Adı</label>
-            <input type="text" class="form-control" id="firmaAdi" v-model="firma.firmaAdi">
-          </div>
-          <div class="mb-3">
-            <label for="SiparisIzinBasSaati" class="form-label">Sipariş İzin Başlangıç Saati</label>
-            <input type="time" class="form-control" id="SiparisIzinBasSaati" v-model="firma.siparisIzinBasTarihi">
-          </div>
-          {{firma.siparisIzinBasTarihi}}
-          <div class="mb-3">
-            <label for="SiparisIzinBitisTarihi" class="form-label">Sipariş İzin Bitiş Saati</label>
-            <input type="time" class="form-control" id="SiparisIzinBitisTarihi" v-model="firma.siparisIzinBitisTarihi">
-          </div>
-          {{firma.siparisIzinBitisTarihi}}
-          <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="onayDurumu" v-model="firma.onayDurumu">
-            <label class="form-check-label" for="onayDurumu">Onay Durumu</label>
-          </div>
-          <button type="button" class="btn btn-primary">Ekle</button>
-        </form>
-
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
-        <button type="button" class="btn btn-primary">Kaydet</button>
       </div>
     </div>
   </div>
-</div>
-    </div>
-   
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      const { createApp } = Vue;
-      createApp({
-        data() {
-          return {
-            url: "https://localhost:7110/",
-            firmalar: [],
-            firma: {
-              id: "",
-              firmaAdi: "",
-              onayDurumu: false,
-              siparisIzinBasTarihi: null,
-              siparisIzinBitisTarihi: null,
-            },
-          };
-        },
-        methods: {
-          getCompanies() {
-            fetch(this.url + 'api/Firma/List')
-              .then((res) => res.json())
-              .then((response) => {
-console.log(response)
-              })
-              .catch((err) => console.log(err.message));
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <script>
+    const { createApp } = Vue;
+    createApp({
+      data() {
+        return {
+          url: "https://localhost:7110/",
+          firmalar: [],
+          firma: {
+            id: "",
+            firmaAdi: "",
+            onayDurumu: false,
+            siparisIzinBasTarihi: null,
+            siparisIzinBitisTarihi: null,
           },
-          addCompany() {
-            fetch(this.url + 'api/Firma/Add', {
-              method: "POST",
-              body: JSON.stringify({
-                firmaAdi: this.firma.firmaAdi,
-                OnayDurumu: this.firma.onayDurumu,
-                SiparisIzinBasSaati: this.firma.siparisIzinBasTarihi,
-                SiparisIzinBitisSaati: this.firma.SiparisIzinBitisSaati,
-              }),
-              headers: { "Content-type": "application/json; charset=UTF-8" },
-            })
-              .then((res) => res.json())
-              .then((json) => console.log(json))
-              .catch((err) => console.log(err));
-          },
+        };
+      },
+      methods: {
+        getCompanies() {
+          fetch(this.url + "api/Firma/List")
+            .then((res) => res.json())
+            .then(
+              (response) => (this.firmalar = response)
+
+              // {
+              //   let array = response.data;
+              //   for(let item in array){
+              //     this.firmalar.push({
+              //       id:array[item].id,
+              //       firmaAdi: array[item].firmaAdi,
+              //       onayDurumu: array[item].onayDurumu,
+              //       siparisIzinBasTarihi: array[item].siparisIzinBasTarihi,
+              //       siparisIzinBitisTarihi: array[item].siparisIzinBitisTarihi,
+              //     })
+              //   }
+              // }
+            )
+            .catch((err) => console.log(err.message));
         },
-        mounted() {
-          this.getCompanies();
+        addCompany() {
+          fetch(this.url + "api/Firma/Add", {
+            method: "POST",
+            body: JSON.stringify({
+              firmaAdi: this.firma.firmaAdi,
+              OnayDurumu: this.firma.onayDurumu,
+              SiparisIzinBasSaati: this.firma.siparisIzinBasTarihi,
+              SiparisIzinBitisSaati:this.firma.SiparisIzinBitisSaati,
+            }),
+            headers: { "Content-type": "application/json; charset=UTF-8" },
+          })
+            .then((res) => res.json())
+            .then((json) => console.log(json))
+            .catch((err) => console.log(err));
         },
-      }).mount("#app");
-    </script>
-  </body>
+      },
+      mounted() {
+        this.getCompanies();
+      },
+    }).mount("#app");
+  </script>
+</body>
+
 </html>
