--- a/home.html
+++ b/home.html
@@ -27,10 +27,10 @@
           <tbody>
             <tr v-for="(firma, index) in firmalar">
               <th scope="row">{{index}}</th>
-              <td>{{firma.FirmaAdi}}</td>
-              <td>{{firma.OnayDurumu}}</td>
-              <td>{{firma.SiparisIzinBasSaati}}</td>
-              <td>{{firma.SiparisIzinBitisSaati}}</td>
+              <td>{{firma.firmaAdi}}</td>
+              <td>{{firma.onayDurumu}}</td>
+              <td>{{firma.siparisIzinBasSaati}}</td>
+              <td>{{firma.siparisIzinBitisSaati}}</td>
             </tr>
           </tbody>
         </table>
@@ -106,20 +106,7 @@
           fetch(this.url + "api/Firma/List")
             .then((res) => res.json())
             .then(
-              (response) => (this.firmalar = response)
-
-              // {
-              //   let array = response.data;
-              //   for(let item in array){
-              //     this.firmalar.push({
-              //       id:array[item].id,
-              //       firmaAdi: array[item].firmaAdi,
-              //       onayDurumu: array[item].onayDurumu,
-              //       siparisIzinBasTarihi: array[item].siparisIzinBasTarihi,
-              //       siparisIzinBitisTarihi: array[item].siparisIzinBitisTarihi,
-              //     })
-              //   }
-              // }
+              (data) => this.firmalar = data
             )
             .catch((err) => console.log(err.message));
         },
