--- a/urun.html
+++ b/urun.html
@@ -14,10 +14,6 @@
   </head>
   <body>
 
-
-
-
-
 <div id="app">
 
    <!-- Button trigger modal -->
@@ -79,5 +75,23 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script>
+        const { createApp } = Vue;
+        createApp({
+        data() {
+          return {
+            url: "https://localhost:7110/",
+            urunler: [],
+            urun: {
+              id: "",
+              firmaId: "",
+              urunAdi: "",
+              stok: 0,
+              fiyat: 0.00,
+            }
+          }
+        },
+        }).mount("#app");
+    </script>
   </body>
 </html>
