--- a/urun.html
+++ b/urun.html
@@ -58,12 +58,11 @@
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
             Kapat
           </button>
-          <button type="button" class="btn btn-primary"  v-on:click="addCompany(firma)">Kaydet</button>
+          <button type="button" class="btn btn-primary"  v-on:click="addProduct(urun)">Kaydet</button>
         </div>
       </div>
     </div>
   </div>
-
 </div>
 
 
