--- a/urun.html
+++ b/urun.html
@@ -35,8 +35,8 @@
         <div class="modal-body">
           <form>
             <div class="mb-3">
-              <label for="firmaAdi" class="form-label">Ürün Adı</label>
-              <input type="text" class="form-control" id="firmaAdi" v-model="urun.urunAdi" />
+              <label for="urunAdi" class="form-label">Ürün Adı</label>
+              <input type="text" class="form-control" id="urunAdi" v-model="urun.urunAdi" />
             </div>
             <div class="mb-3">
               <label for="firmaAdi" class="form-label">Firma</label>
