--- a/siparis.html
+++ b/siparis.html
@@ -13,7 +13,58 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+
+ <!-- Button trigger modal -->
+ <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Ürün Ekle
+</button>
+
+
+ <!-- Add Modal -->
+ <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">
+          Ürün Ekle
+        </h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="siparisiVereninAdi" class="form-label">Siparişi Verenin Adı</label>
+            <input type="text" class="form-control" id="siparisiVereninAdi" v-model="siparis.siparisiVereninAdi" />
+          </div>
+          <div class="mb-3">
+            <label for="firmaAdi" class="form-label">Firma</label>
+            <select  v-model="siparis.firmaId" class="form-select" id="firmaAdi">
+              <option v-bind:value="firma.id" v-for="firma in firmalar">{{firma.firmaAdi}}</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="urunAdi" class="form-label">Urun</label>
+            <select  v-model="siparis.urunId" class="form-select" id="urunAdi">
+              <option v-bind:value="urun.id" v-for="urun in urunler">{{urun.urunAdi}}</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="siparisTarihi" class="form-label">Sipariş Tarihi</label>
+            <input type="datetime-local" class="form-control" id="siparisTarihi" v-model="siparis.siparisTarihi" />
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Kapat
+        </button>
+        <button type="button" class="btn btn-primary"  v-on:click="addSiparis(urun)">Kaydet</button>
+      </div>
+    </div>
+  </div>
+</div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -30,18 +81,20 @@
                 id: "",
                 firmaId: "",
                 urunId: "",
+                siparisiVereninAdi: "",
+                siparisTarihi: ""
             }
           };
         },
         methods: {
-            addProduct(data){
-            fetch(this.url + "api/urun/add",{
+            addSiparis(data){
+            fetch(this.url + "api/siparis/add",{
               method: "POST",
               body: JSON.stringify({
-                firmaId: this.urun.firmaId,
-                urunAdi: data.urunAdi,
-                stok: data.stok,
-                fiyat: data.fiyat
+                firmaId: this.siparis.firmaId,
+                urunId: this.siparis.urunId,
+                siparisiVereninAdi: data.siparisiVereninAdi,
+                siparisTarihi: data.siparisTarihi
               }),
               headers: { "Content-type": "application/json; charset=UTF-8" },
             })
@@ -61,6 +114,10 @@
               .catch((err) => console.log(err.message));
           },
         },
+        beforeMount(){
+          this.getCompanies();
+          this.getProducts();
+        }
       }).mount("#app");
     </script>
   </body>
