proje tamamlandı bu projede computed ile cascade

--- a/siparis.html
+++ b/siparis.html
@@ -59,7 +59,7 @@
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
               Kapat
             </button>
-            <button type="button" class="btn btn-primary" v-on:click="addSiparis(urun)">
+            <button type="button" class="btn btn-primary" v-on:click="addSiparis(siparis)">
               Kaydet
             </button>
           </div>
